2004-01-20  Chris Toshok  <toshok@ximian.com>

	* gui/component/addressbook-migrate.c (create_groups): deal with
	the groups/sources already being there.  Essentially make this
	function idempotent.
	(addressbook_migrate): unconditionally call create_groups now.
	move the version logic here from ipl_upgradeFromVersion, and
	include more versions in the set of those we upgrade from.

	* gui/component/addressbook-migrate.h: add major/minor/revision
	args to addressbook_migrate.

	* gui/component/addressbook-component.c (impl_upgradeFromVersion):
	remove the version logic from here.

2004-01-20 Sivaiah Nallagatla   <snallagatla@novell.com>

	* printing/e-contact-print.c (e_contact_print_response): do not 
	try to unref when query is NULL

2004 -01-20 Sivaiah Nallagatla  <snallagatla@novell.com>

	* gui/contact-editor/e-contact-editor.c (edit_im_clicked) : do not call
	gtk_tree_model_get when nothing in the list is selected 

2004-01-19  Hans Petter Jansson  <hpj@ximian.com>

	* gui/component/select-names/e-select-names.etspec: Get name from
	correct model column.

2004-01-19  Hans Petter Jansson  <hpj@ximian.com>

	* printing/e-contact-print.c (complete_sequence): Only unref if we
	have a query.

2004-01-19  Hans Petter Jansson  <hpj@ximian.com>

	* gui/component/addressbook-component.c
	(get_primary_source): Implement.
	(load_primary_selection): Use get_primary_source ().
	(impl_requestCreateItem): Use get_primary_source (), fixing a crash
	when we're asked to create a new item and we don't have the controls.

2004-01-16  Hans Petter Jansson  <hpj@ximian.com>

	* gui/component/addressbook.c (load_source_auth_cb): Don't run
	callback if the action was cancelled.
	(load_source_cb): Ditto.
	(addressbook_load_source): Return an ID for the load attempt.
	(addressbook_load_source_cancel): Implement, allows cancelling a
	load attempt.

	* gui/contact-editor/e-contact-editor.c (new_target_cb): Clear the
	values for in-progress load operation. Only unref new_book if it's